# chatbot-basicao-rag

./: README  README.md  app.py  pyproject.toml
utils/: chatbot.py  text.py
